<resources>
    <string name="app_name">Quizzer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="description">This app implements a quizzing application, with the
    quizzing database stored locally on the device in JSON files. To begin, click the
        floating button below right to select a quiz topic.</string>

    <string name="webadd">eagle.phys.utk.edu/guidry/android</string>

    <string name="astro_quiz">Astronomy Quiz</string>
    <string name="history_quiz">History Quiz</string>
    <string name="math_quiz">Math Quiz</string>
    <string name="geography_quiz">Geography Quiz</string>
    <string name="biology_quiz">Biology Quiz</string>

    <string name="astronomy">Astronomy</string>
    <string name="history">History</string>
    <string name="math">Math</string>
    <string name="geography">Geography</string>
    <string name="biology">Biology</string>

    <string name="slide_show">Math Quiz</string>
    <string name="google_drive">Geography Quiz</string>
    <string name="secTitle0">Subjects</string>
    <string name="secTitle1">Preferences</string>
    <string name="google_plus">Settings</string>
    <string name="secTitle2">About</string>
    <string name="play_store">Help</string>
    <string name="choose_subject">Choose a Subject</string>
    <string name="new_subject">Choose a New Subject</string>

    <string name="snackText">NEW for new subject. Swipe to dismiss.</string>
    <string name="snackButtonText">New</string>

    <string name="main_title">Quiz Me</string>
    <string name="QA_example">Astro Question (POST)</string>
    <string name="submitLabel">Submit</string>
    <string name="nextQuestionLabel">Next Question</string>
    <string name="resetLabel">Reset Score</string>
    <string name="noAnswer">You must select an answer before you click the
		Submit button!</string>
</resources>
