<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/astro_quiz"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:title="@string/astronomy" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_exposure_black_24dp"
            android:title="@string/math" />
        <item
            android:id="@+id/nav_drive"
            android:icon="@drawable/ic_terrain_black_24dp"
            android:title="@string/geography" />
        <item
            android:id="@+id/nav_biology"
            android:icon="@drawable/ic_filter_vintage_black_24dp"
            android:title="@string/biology" />
    </group>

    <item android:title="@string/secTitle1">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/google_plus" />
        </menu>
    </item>

    <item android:title="@string/secTitle2">
        <menu>
            <item
                android:id="@+id/nav_play"
                android:icon="@drawable/ic_android_black_24dp"
                android:title="@string/play_store" />
        </menu>
    </item>

</menu>
